<resources>
    <string name="app_name">TresApp</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="tv_registre_se">Registre-se</string>
    <string name="hint_nome">Nome</string>
    <string name="hint_data_de_nascimento">Data de nascimento</string>
    <string name="hint_email">E-mail</string>
    <string name="hint_senha">Senha</string>
    <string name="helper_required">Obrigatório*</string>
</resources>